--- a/src/app/nav-map/components/nav-map-page/nav-map-page.component.css
+++ b/src/app/nav-map/components/nav-map-page/nav-map-page.component.css
@@ -1,6 +1,6 @@
 .base-map-container {
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: calc(100vh - 54px);
 }
 
 .zoom-buttons {
